--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,15 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/ruby:2.5.1-node-browsers
+          PGHOST: 127.0.0.1
+          PGUSER: root
+          RAILS_ENV: test
+
       - image: circleci/postgres:9.6.2-alpine
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: MyTime_test
+          POSTGRES_PASSWORD: ""
 
     working_directory: ~/repo
 
