--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/ruby:2.5.1-node-browsers
+        environment:
           PGHOST: 127.0.0.1
           PGUSER: root
           RAILS_ENV: test
