--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,12 @@ jobs:
       - image: circleci/ruby:2.5.1-node
         environment:
           PGHOST: 127.0.0.1
-          PGUSER: myapp-test
+          PGUSER: MyTime_test
           RAILS_ENV: test
       - image: circleci/postgres:9.6-alpine
         environment:
-          POSTGRES_USER: myapp
-          POSTGRES_DB: myapp-test
+          POSTGRES_USER: MyTime_test
+          POSTGRES_DB: MyTime_test
           POSTGRES_PASSWORD: ""
     steps:
       - checkout
