--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,6 +9,6 @@ local:
 amazon:
   service: S3
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
-  secret_access_key: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_KEY'] %>
   region: us-east-1
   bucket: <%= ENV['AWS_BUCKET'] %>
